--- a/src/components/Logement/Logement.sass
+++ b/src/components/Logement/Logement.sass
@@ -1,50 +1,61 @@
 @import 'sass/_global.sass'
 
-header.info
-    display: flex
-    justify-content: space-between
-    padding: 1rem 0
-    text-align: center
-    margin-top: 1rem
-    h1
-        font-size: 1.5rem
-        margin: 0
-    p
-        font-size: 1rem
-        margin: 0 0 1rem 0
-    .info-logement
+.logement
+    padding-bottom: 1rem
+    header.info
         display: flex
-        flex-direction: column
-        align-items: flex-start
-        .pill
-            display: inline-flex
-            justify-content: center
-            align-items: center
-            padding: 0 0.5rem
-            border-radius: 10px
-            background-color: $main-color
-            margin-right: 0.5rem
-            min-width: 115px
-            height: 25px
-            color: white
-            font-size: 0.8rem
+        justify-content: space-between
+        padding: 1rem 0
+        text-align: center
+        margin-top: 1rem
+        h1
+            font-size: 1.5rem
+            margin: 0
+        p
+            font-size: 1rem
+            margin: 0 0 1rem 0
+        .info-logement
+            display: flex
+            flex-direction: column
+            align-items: flex-start
+            .pill
+                display: inline-flex
+                justify-content: center
+                align-items: center
+                padding: 0 0.5rem
+                border-radius: 10px
+                background-color: $main-color
+                margin-right: 0.5rem
+                min-width: 115px
+                height: 25px
+                color: white
+                font-size: 0.8rem
 
-    .info-host
+        .info-host
+            display: flex
+            align-items: flex-start
+
+            .name
+                margin-right: 0.5rem
+                font-size: 1.1rem
+                line-height: 1.5rem
+                text-align: right
+                padding-top: 0.3rem
+                margin-right: 0.5rem
+            img
+                width: 64px
+                height: 64px
+                border-radius: 50%
+            .rating
+
+    .details
         display: flex
-        align-items: flex-start
-
-        .name
-            margin-right: 0.5rem
-            font-size: 1.1rem
-            line-height: 1.5rem
-            text-align: right
-            padding-top: 0.3rem
-            margin-right: 0.5rem
-        img
-            width: 64px
-            height: 64px
-            border-radius: 50%
-        .rating
+        gap: 2rem
+        .dropdown
+            flex-grow: 1
+            width: 50%
+            .launcher
+                width: 100%
 
 @media (max-width: 560px)
     .info-host
