--- a/src/components/Dropdown/Dropdown.sass
+++ b/src/components/Dropdown/Dropdown.sass
@@ -1,4 +1,11 @@
 @import 'sass/_global'
+.dropdown
+    width: 100%
+    max-width: 1240px
+    display: flex
+    flex-direction: column
+    // justify-content: center
+    align-items: center
 .launcher
     display: block
     position: relative
@@ -26,3 +33,5 @@
 
 .content-block
     padding: 2rem 1.2rem 1.2rem 1.2rem
+    li
+        list-style: none
