--- a/src/components/Logement/Carousel.sass
+++ b/src/components/Logement/Carousel.sass
@@ -1,11 +1,51 @@
 @import '@sass/_global.sass'
 .carousel
     display: flex
+    position: relative
     justify-content: center
     align-items: center
     width: 100%
     max-width: 1240px
     height: 415px
     border-radius: 25px
-    border: 1px solid $main-color
     margin-top: 20px
+    overflow: hidden
+    img
+        position: absolute
+        object-fit: cover
+        z-index: 0
+    .carousel-buttons
+        position: absolute
+        z-index: 1
+        display: flex
+        justify-content: space-between
+        align-items: center
+        width: 100%
+        height: 100%
+        i
+            display: flex
+            justify-content: center
+            align-items: center
+            width: 60px
+            height: 100%
+            cursor: pointer
+            transition: all 0.3s ease
+            &:hover
+                background-color: rgba(0, 0, 0, 0.2)
+                color: white
+    .current
+        display: flex
+        justify-content: center
+        align-items: center
+        position: absolute
+        bottom: 20px
+        width: 60px
+        height: 60px
+        border-radius: 50%
+        background-color: rgba(0, 0, 0, 0.1)
+        color: white
+        font-size: 1.2rem
+        font-weight: 700
+        cursor: pointer
+        transition: all 0.3s ease
+        z-index: 4
