--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -33,8 +33,10 @@ header
     header
         padding-top: 20px
         .logo
-            width: 145px
+            width: 120px
             height: 47px
+            img
+                width: 100%
         nav
             ul > li
                 margin-left: 15px
