--- a/src/components/Dropdown/Dropdown.sass
+++ b/src/components/Dropdown/Dropdown.sass
@@ -4,25 +4,24 @@
     max-width: 1240px
     display: flex
     flex-direction: column
-    // justify-content: center
     align-items: center
-.launcher
-    display: block
-    position: relative
-    background-color: $main-color
-    color: $base-color
-    border-radius: 5px
-    padding: 9px 18px
-    margin-top: 2rem
-    font-size: 1.2rem
-    font-weight: bold
-    width: 100%
-    max-width: 1023px
-    cursor: pointer
-    i
-        position: absolute
-        right: 20px
-        top: calc(50% - 20px)
+    .launcher
+        display: block
+        position: relative
+        background-color: $main-color
+        color: $base-color
+        border-radius: 5px
+        padding: 9px 18px
+        margin-top: 2rem
+        font-size: 1.2rem
+        font-weight: bold
+        width: 100%
+        max-width: 1023px
+        cursor: pointer
+        i
+            position: absolute
+            right: 20px
+            top: calc(50% - 20px)
 
 .container-block
     background-color: $bg-gray
@@ -30,8 +29,21 @@
     width: 100%
     max-width: 1023px
     border-radius: 5px
+    flex-grow: 1
 
 .content-block
     padding: 2rem 1.2rem 1.2rem 1.2rem
     li
         list-style: none
+
+@media (max-width: 560px)
+    .dropdown
+        .launcher
+            font-size: 1rem
+            padding: 9px 18px
+            margin-top: 1rem
+        .container-block
+            max-width: 100%
+            border-radius: 0
+        .content-block
+            padding: 1rem 1.2rem 1.2rem 1.2rem
